# embedded-system-ATM

./: CMakeLists.txt  LCDops.c  LCDops.h  generalOps.c  generalOps.h  mainOne.c  mainTwo.c  presetChars.c  presetChars.h  presetMessages.c  presetMessages.h  ultrasonic.c
